...
            <Text style={styles.voiceButtonTextHome}>
              {isRecording ? t('listening') : t('voice_note')}
            </Text>
          </TouchableOpacity>

          <TextInput
            testID="project-description-input"
            style={styles.inputHome}
            placeholder={t('type_description_placeholder')}
            placeholderTextColor={theme.colors.textSecondary}
            multiline
            value={isRecording ? (description ? `${description} ${transcript}` : transcript) : description}
            onChangeText={setDescription}
...
