...
      Alert.alert('Could not share', e.message);
    }
  };

  const saveJob = async (type) => {
    let success = false;
    if (type === 'Honey Do') {
      success = await saveToHoneyDoList({ ...project, originalRequest, checkedSteps });
    } else {
      success = await saveToContractorList({ ...project, originalRequest, checkedSteps });
    }

    if (success) {
...
